before packing metric cli

--- a/dev_notebooks/Compute_Metrics.ipynb
+++ b/dev_notebooks/Compute_Metrics.ipynb
@@ -9,27 +9,22 @@
     "import os\n",
     "import torch\n",
     "from PIL import Image\n",
-    "from tqdm.auto import tqdm\n",
+    "from tqdm.auto import tqdm, trange\n",
+    "from torchmetrics.image import StructuralSimilarityIndexMeasure, LearnedPerceptualImagePatchSimilarity\n",
     "from metrics import *\n",
     "from dev import *\n",
+    "from utils import to_tensor\n",
     "\n",
-    "\n",
+    "# Example paths\n",
     "clean_path = \"/fs/nexus-projects/HuangWM/datasets/main/diffusiondb/real\"\n",
     "attacked_path = \"/fs/nexus-projects/HuangWM/datasets/attacked/diffusiondb/distortion_single_rotation-9-real\"\n",
     "\n",
-    "\n",
-    "QUALITY_METRICS = [\n",
-    "    \"Legacy FID\",\n",
-    "    \"Clean FID\",\n",
-    "    \"CLIP FID\",\n",
-    "    \"PSNR\",\n",
-    "    \"SSIM\",\n",
-    "    \"NMI\",\n",
-    "    \"LPIPS\",\n",
-    "    \"WATSON\",\n",
-    "    \"Delta Aesthetics\",\n",
-    "    \"Delta Artifacts\",\n",
-    "    \"Delta CLIP-Score\",\n",
+    "# Loading all, for easy testing\n",
+    "clean_images = [\n",
+    "    Image.open(os.path.join(clean_path, f\"{idx}.png\")) for idx in range(LIMIT)\n",
+    "]\n",
+    "attacked_images = [\n",
+    "    Image.open(os.path.join(attacked_path, f\"{idx}.png\")) for idx in range(LIMIT)\n",
     "]"
    ]
   },
@@ -44,38 +39,17 @@
     "    attacked_path,\n",
     "    mode=\"legacy\",\n",
     "    device=torch.device(\"cuda\"),\n",
+    "    batch_size=128,\n",
     "    num_workers=8,\n",
     "    verbose=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "compute_fid(\n",
-    "    clean_path,\n",
-    "    attacked_path,\n",
-    "    mode=\"clean\",\n",
-    "    device=torch.device(\"cuda\"),\n",
-    "    num_workers=8,\n",
-    "    verbose=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
     "compute_fid(\n",
     "    clean_path,\n",
     "    attacked_path,\n",
     "    mode=\"clip\",\n",
     "    device=torch.device(\"cuda\"),\n",
+    "    batch_size=128,\n",
     "    num_workers=8,\n",
     "    verbose=True,\n",
     ")"
@@ -87,13 +61,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_images = [\n",
-    "    Image.open(os.path.join(clean_path, f\"{idx}.png\")) for idx in range(LIMIT)\n",
-    "]\n",
-    "attacked_images = [\n",
-    "    Image.open(os.path.join(attacked_path, f\"{idx}.png\")) for idx in range(LIMIT)\n",
-    "]\n",
-    "\n",
     "compute_psnr_repeated(clean_images, attacked_images, num_workers=8, verbose=True)\n",
     "compute_ssim_repeated(clean_images, attacked_images, num_workers=8, verbose=True)\n",
     "compute_nmi_repeated(clean_images, attacked_images, num_workers=8, verbose=True)"
@@ -105,7 +72,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "compute_lpips_repeated(clean_images, attacked_images, mode=\"vgg\", verbose=True)"
+    "ssim = StructuralSimilarityIndexMeasure(reduction=None).cuda()\n",
+    "batch_size = 32\n",
+    "for i in trange(0, len(clean_images), batch_size):\n",
+    "    clean_tensors = to_tensor(clean_images[i: min(i+batch_size, LIMIT)]).cuda()\n",
+    "    attacked_tensors = to_tensor(attacked_images[i: min(i+batch_size, LIMIT)]).cuda()\n",
+    "    ssim(clean_tensors, attacked_tensors).cpu().tolist()"
    ]
   },
   {
@@ -114,7 +86,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "compute_watson_repeated(clean_images, attacked_images, mode=\"vgg\", verbose=True)"
+    "lpips = LearnedPerceptualImagePatchSimilarity(net_type='alex').cuda()\n",
+    "\n",
+    "batch_size = 1\n",
+    "for i in trange(0, len(clean_images), batch_size):\n",
+    "    clean_tensors = to_tensor(clean_images[i: min(i+batch_size, LIMIT)]).cuda()\n",
+    "    attacked_tensors = to_tensor(attacked_images[i: min(i+batch_size, LIMIT)]).cuda()\n",
+    "    for j in range(batch_size):\n",
+    "        lpips(clean_tensors[j].unsqueeze(0), attacked_tensors[j].unsqueeze(0)).cpu().item()"
    ]
   },
   {
@@ -126,17 +105,12 @@
     "models = load_aesthetics_and_artifacts_models()\n",
     "\n",
     "clean_aesthetics_scores, clean_artifaces_scores = [], []\n",
-    "for image in clean_images:\n",
+    "for image in tqdm(clean_images):\n",
     "    aesthetics_score, artifaces_score = compute_aesthetics_and_artifacts_scores(\n",
     "        image, models\n",
     "    )\n",
     "    clean_aesthetics_scores.append(aesthetics_score)\n",
-    "    clean_artifaces_scores.append(artifaces_score)\n",
-    "\n",
-    "\n",
-    "clean_scores = [\n",
-    "    compute_aesthetics_and_artifacts_scores(image, models) for image in clean_images\n",
-    "]"
+    "    clean_artifaces_scores.append(artifaces_score)"
    ]
   },
   {
@@ -146,7 +120,12 @@
    "outputs": [],
    "source": [
     "models = load_open_clip_model_preprocess_and_tokenizer()\n",
-    "compute_clip_score(image, prompt, models)"
+    "prompt = \"A photo of a cat\"\n",
+    "\n",
+    "clip_scores = []\n",
+    "for image in tqdm(clean_images):\n",
+    "    clip_score = compute_clip_score(image, prompt, models)\n",
+    "    clip_scores.append(clip_score)"
    ]
   }
  ],
