entering debuging metric cli

--- a/dev_notebooks/Compute_Metrics.ipynb
+++ b/dev_notebooks/Compute_Metrics.ipynb
@@ -10,7 +10,10 @@
     "import torch\n",
     "from PIL import Image\n",
     "from tqdm.auto import tqdm, trange\n",
-    "from torchmetrics.image import StructuralSimilarityIndexMeasure, LearnedPerceptualImagePatchSimilarity\n",
+    "from torchmetrics.image import (\n",
+    "    StructuralSimilarityIndexMeasure,\n",
+    "    LearnedPerceptualImagePatchSimilarity,\n",
+    ")\n",
     "from metrics import *\n",
     "from dev import *\n",
     "from utils import to_tensor\n",
@@ -75,8 +78,8 @@
     "ssim = StructuralSimilarityIndexMeasure(reduction=None).cuda()\n",
     "batch_size = 32\n",
     "for i in trange(0, len(clean_images), batch_size):\n",
-    "    clean_tensors = to_tensor(clean_images[i: min(i+batch_size, LIMIT)]).cuda()\n",
-    "    attacked_tensors = to_tensor(attacked_images[i: min(i+batch_size, LIMIT)]).cuda()\n",
+    "    clean_tensors = to_tensor(clean_images[i : min(i + batch_size, LIMIT)]).cuda()\n",
+    "    attacked_tensors = to_tensor(attacked_images[i : min(i + batch_size, LIMIT)]).cuda()\n",
     "    ssim(clean_tensors, attacked_tensors).cpu().tolist()"
    ]
   },
@@ -86,14 +89,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lpips = LearnedPerceptualImagePatchSimilarity(net_type='alex').cuda()\n",
+    "lpips = LearnedPerceptualImagePatchSimilarity(net_type=\"alex\").cuda()\n",
     "\n",
     "batch_size = 1\n",
     "for i in trange(0, len(clean_images), batch_size):\n",
-    "    clean_tensors = to_tensor(clean_images[i: min(i+batch_size, LIMIT)]).cuda()\n",
-    "    attacked_tensors = to_tensor(attacked_images[i: min(i+batch_size, LIMIT)]).cuda()\n",
+    "    clean_tensors = to_tensor(clean_images[i : min(i + batch_size, LIMIT)]).cuda()\n",
+    "    attacked_tensors = to_tensor(attacked_images[i : min(i + batch_size, LIMIT)]).cuda()\n",
     "    for j in range(batch_size):\n",
-    "        lpips(clean_tensors[j].unsqueeze(0), attacked_tensors[j].unsqueeze(0)).cpu().item()"
+    "        lpips(\n",
+    "            clean_tensors[j].unsqueeze(0), attacked_tensors[j].unsqueeze(0)\n",
+    "        ).cpu().item()"
    ]
   },
   {
