finish metric cli

--- a/dev_notebooks/Compute_Metrics.ipynb
+++ b/dev_notebooks/Compute_Metrics.ipynb
@@ -10,13 +10,8 @@
     "import torch\n",
     "from PIL import Image\n",
     "from tqdm.auto import tqdm, trange\n",
-    "from torchmetrics.image import (\n",
-    "    StructuralSimilarityIndexMeasure,\n",
-    "    LearnedPerceptualImagePatchSimilarity,\n",
-    ")\n",
     "from metrics import *\n",
     "from dev import *\n",
-    "from utils import to_tensor\n",
     "\n",
     "# Example paths\n",
     "clean_path = \"/fs/nexus-projects/HuangWM/datasets/main/diffusiondb/real\"\n",
@@ -75,12 +70,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ssim = StructuralSimilarityIndexMeasure(reduction=None).cuda()\n",
+    "model = load_perceptual_models(\"lpips\", mode=\"alex\", device=torch.device(\"cuda\"))\n",
+    "\n",
     "batch_size = 32\n",
     "for i in trange(0, len(clean_images), batch_size):\n",
-    "    clean_tensors = to_tensor(clean_images[i : min(i + batch_size, LIMIT)]).cuda()\n",
-    "    attacked_tensors = to_tensor(attacked_images[i : min(i + batch_size, LIMIT)]).cuda()\n",
-    "    ssim(clean_tensors, attacked_tensors).cpu().tolist()"
+    "    compute_lpips_repeated(\n",
+    "        clean_images[i : min(i + batch_size, len(clean_images))],\n",
+    "        attacked_images[i : min(i + batch_size, len(clean_images))],\n",
+    "        mode=\"alex\",\n",
+    "        model=model,\n",
+    "        device=torch.device(\"cuda\"),\n",
+    "    )"
    ]
   },
   {
@@ -89,16 +89,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lpips = LearnedPerceptualImagePatchSimilarity(net_type=\"alex\").cuda()\n",
+    "model = load_perceptual_models(\"watson\", mode=\"dft\", device=torch.device(\"cuda\"))\n",
     "\n",
-    "batch_size = 1\n",
+    "\n",
+    "batch_size = 32\n",
     "for i in trange(0, len(clean_images), batch_size):\n",
-    "    clean_tensors = to_tensor(clean_images[i : min(i + batch_size, LIMIT)]).cuda()\n",
-    "    attacked_tensors = to_tensor(attacked_images[i : min(i + batch_size, LIMIT)]).cuda()\n",
-    "    for j in range(batch_size):\n",
-    "        lpips(\n",
-    "            clean_tensors[j].unsqueeze(0), attacked_tensors[j].unsqueeze(0)\n",
-    "        ).cpu().item()"
+    "    compute_watson_repeated(\n",
+    "        clean_images[i : min(i + batch_size, len(clean_images))],\n",
+    "        attacked_images[i : min(i + batch_size, len(clean_images))],\n",
+    "        mode=\"dft\",\n",
+    "        model=model,\n",
+    "        device=torch.device(\"cuda\"),\n",
+    "    )"
    ]
   },
   {
@@ -107,15 +109,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models = load_aesthetics_and_artifacts_models()\n",
+    "model = load_aesthetics_and_artifacts_models(device=torch.device(\"cuda\"))\n",
     "\n",
-    "clean_aesthetics_scores, clean_artifaces_scores = [], []\n",
-    "for image in tqdm(clean_images):\n",
+    "batch_size = 32\n",
+    "for i in trange(0, len(clean_images), batch_size):\n",
     "    aesthetics_score, artifaces_score = compute_aesthetics_and_artifacts_scores(\n",
-    "        image, models\n",
+    "        clean_images[i : min(i + batch_size, len(clean_images))],\n",
+    "        model,\n",
+    "        device=torch.device(\"cuda\"),\n",
     "    )\n",
-    "    clean_aesthetics_scores.append(aesthetics_score)\n",
-    "    clean_artifaces_scores.append(artifaces_score)"
+    "    print(aesthetics_score, artifaces_score)"
    ]
   },
   {
@@ -124,13 +127,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models = load_open_clip_model_preprocess_and_tokenizer()\n",
-    "prompt = \"A photo of a cat\"\n",
+    "models = load_open_clip_model_preprocess_and_tokenizer(device=torch.device(\"cuda\"))\n",
+    "prompts = [\"A photo of a cat\"] * len(clean_images)\n",
     "\n",
-    "clip_scores = []\n",
-    "for image in tqdm(clean_images):\n",
-    "    clip_score = compute_clip_score(image, prompt, models)\n",
-    "    clip_scores.append(clip_score)"
+    "batch_size = 32\n",
+    "for i in trange(0, len(clean_images), batch_size):\n",
+    "    clip_scores = compute_clip_score(\n",
+    "        clean_images[i : min(i + batch_size, len(clean_images))],\n",
+    "        prompts[i : min(i + batch_size, len(clean_images))],\n",
+    "        models,\n",
+    "        device=torch.device(\"cuda\"),\n",
+    "    )\n",
+    "    print(clip_scores)"
    ]
   }
  ],
