some plotting codes

--- a/dev_notebooks/Check_Dataset_Record_Consistency.ipynb
+++ b/dev_notebooks/Check_Dataset_Record_Consistency.ipynb
@@ -11,26 +11,22 @@
      "text": [
       "####################\n",
       "diffusiondb\n",
-      "Number of extra records: 7\n",
-      "0, ('real_tree_ring', 'adv_cls_wm1_wm2_0.04_200_warm', 8.0)\n",
-      "1, ('tree_ring', 'adv_emb_clip_untg_alphaRatio_0.05_step_200', 16.0)\n",
-      "2, ('tree_ring', 'adv_emb_resnet18_untg', 8.0)\n",
-      "3, ('stegastamp', 'adv_emb_resnet18_untg', 8.0)\n",
-      "4, ('tree_ring', 'adv_cls_wm1_wm2_0.04_200_warm', 8.0)\n",
-      "5, ('stegastamp', 'regen_diffusion', 200.0)\n",
-      "6, ('stable_sig', 'adv_emb_resnet18_untg', 8.0)\n",
+      "Number of extra records: 5\n",
+      "0, ('tree_ring', 'adv_cls_wm1_wm2_0.04_200_warm', 8.0)\n",
+      "1, ('real_tree_ring', 'adv_cls_wm1_wm2_0.04_200_warm', 8.0)\n",
+      "2, ('stegastamp', 'adv_emb_resnet18_untg', 8.0)\n",
+      "3, ('stable_sig', 'adv_emb_resnet18_untg', 8.0)\n",
+      "4, ('tree_ring', 'adv_emb_clip_untg_alphaRatio_0.05_step_200', 16.0)\n",
       "####################\n",
       "mscoco\n",
       "Number of extra records: 0\n",
       "####################\n",
       "dalle3\n",
-      "Number of extra records: 6\n",
-      "0, ('tree_ring', 'regen_diffusion', 20.0)\n",
-      "1, ('tree_ring', 'adv_emb_resnet18_untg', 8.0)\n",
-      "2, ('real', 'regen_diffusion', 100.0)\n",
-      "3, ('stegastamp', 'adv_emb_resnet18_untg', 8.0)\n",
-      "4, ('stegastamp', 'regen_diffusion', 200.0)\n",
-      "5, ('stable_sig', 'adv_emb_resnet18_untg', 8.0)\n"
+      "Number of extra records: 4\n",
+      "0, ('stegastamp', 'adv_emb_resnet18_untg', 8.0)\n",
+      "1, ('stable_sig', 'adv_emb_resnet18_untg', 8.0)\n",
+      "2, ('tree_ring', 'regen_diffusion', 20.0)\n",
+      "3, ('real', 'regen_diffusion', 100.0)\n"
      ]
     }
    ],
