start finalizing results and plots for pub

--- a/dev_notebooks/Check_Dataset_Record_Consistency.ipynb
+++ b/dev_notebooks/Check_Dataset_Record_Consistency.ipynb
@@ -9,52 +9,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "####################\n",
-      "diffusiondb\n",
-      "Number of extra records: 5\n",
-      "0, ('tree_ring', 'adv_cls_wm1_wm2_0.04_200_warm', 8.0)\n",
-      "1, ('real_tree_ring', 'adv_cls_wm1_wm2_0.04_200_warm', 8.0)\n",
-      "2, ('stegastamp', 'adv_emb_resnet18_untg', 8.0)\n",
-      "3, ('stable_sig', 'adv_emb_resnet18_untg', 8.0)\n",
-      "4, ('tree_ring', 'adv_emb_clip_untg_alphaRatio_0.05_step_200', 16.0)\n",
-      "####################\n",
-      "mscoco\n",
-      "Number of extra records: 0\n",
-      "####################\n",
-      "dalle3\n",
-      "Number of extra records: 4\n",
-      "0, ('stegastamp', 'adv_emb_resnet18_untg', 8.0)\n",
-      "1, ('stable_sig', 'adv_emb_resnet18_untg', 8.0)\n",
-      "2, ('tree_ring', 'regen_diffusion', 20.0)\n",
-      "3, ('real', 'regen_diffusion', 100.0)\n"
+      "############################################################\n",
+      "Checking for inconsistency in record types\n",
+      "Missing diffusiondb, tree_ring, 2x_regen, 10.0, reverse\n",
+      "Missing diffusiondb, tree_ring, adv_emb_clip_untg_alphaRatio_0.05_step_200, 2.0, decode\n",
+      "Missing diffusiondb, tree_ring, 2x_regen, 10.0, decode\n",
+      "Missing diffusiondb, tree_ring, 2x_regen, 10.0, metric\n",
+      "Missing diffusiondb, stable_sig, 2x_regen, 10.0, metric\n",
+      "Missing diffusiondb, stegastamp, 2x_regen, 10.0, decode\n",
+      "Missing diffusiondb, stegastamp, 2x_regen, 10.0, metric\n",
+      "Missing mscoco, tree_ring, 2x_regen, 10.0, status\n",
+      "Missing dalle3, tree_ring, 2x_regen, 10.0, status\n",
+      "############################################################\n",
+      "Checking for inconsistency across datasetes and sources\n",
+      "Missing diffusiondb, tree_ring, adv_emb_clip_untg_alphaRatio_0.05_step_200, 2.0\n",
+      "Missing diffusiondb, tree_ring, 2x_regen, 10.0\n",
+      "Missing diffusiondb, stable_sig, 2x_regen, 10.0\n",
+      "Missing diffusiondb, stegastamp, 2x_regen, 10.0\n",
+      "Missing mscoco, tree_ring, 2x_regen, 10.0\n",
+      "Missing dalle3, tree_ring, 2x_regen, 10.0\n"
      ]
     }
    ],
    "source": [
     "from dev import *\n",
     "\n",
-    "record_keys = {}\n",
-    "for dataset_name in [\"diffusiondb\", \"mscoco\", \"dalle3\"]:\n",
-    "    json_dict = get_all_json_paths(\n",
-    "        lambda _dataset_name, _attack_name, _attack_strength, _source_name, _result_type: (\n",
-    "            (_dataset_name == dataset_name)\n",
-    "        )\n",
-    "    )\n",
-    "    progress_dict = {\n",
-    "        (key[3], key[1], key[2]): [None, None, None, None] for key in json_dict.keys()\n",
-    "    }\n",
-    "    record_keys[dataset_name] = set(progress_dict.keys())\n",
     "\n",
-    "for dataset_name in [\"diffusiondb\", \"mscoco\", \"dalle3\"]:\n",
-    "    print(\"#\" * 20)\n",
-    "    print(dataset_name)\n",
-    "    print(\n",
-    "        f\"Number of extra records: {len(record_keys[dataset_name] - set.intersection(*record_keys.values()))}\"\n",
-    "    )\n",
-    "    for idx, record_key in enumerate(\n",
-    "        record_keys[dataset_name] - set.intersection(*record_keys.values())\n",
-    "    ):\n",
-    "        print(f\"{idx}, {record_key}\")"
+    "record_keys_per_dataset_source = {}\n",
+    "print(\"#\" * 60)\n",
+    "print(\"Checking for inconsistency in record types\")\n",
+    "for dataset_name in DATASET_NAMES.keys():\n",
+    "    for source_name in WATERMARK_METHODS.keys():\n",
+    "        record_keys_per_result_type = {}\n",
+    "        result_types_expected = (\n",
+    "            [\"status\"]\n",
+    "            + ([\"reverse\"] if source_name in [\"tree_ring\"] else [])\n",
+    "            + [\"decode\", \"metric\"]\n",
+    "        )\n",
+    "        for result_type in result_types_expected:\n",
+    "            record_keys_per_result_type[result_type] = set(\n",
+    "                [\n",
+    "                    (key[1], key[2])\n",
+    "                    for key in get_all_json_paths(\n",
+    "                        lambda _dataset_name, _attack_name, _attack_strength, _source_name, _result_type: (\n",
+    "                            (_dataset_name == dataset_name)\n",
+    "                            and (\n",
+    "                                _source_name == source_name\n",
+    "                                if source_name != \"real\"\n",
+    "                                else _source_name.startswith(\"real\")\n",
+    "                            )\n",
+    "                            and (_result_type == result_type)\n",
+    "                        )\n",
+    "                    ).keys()\n",
+    "                ]\n",
+    "            )\n",
+    "        for result_type in result_types_expected:\n",
+    "            for attack_name, attack_strength in (\n",
+    "                set.union(*record_keys_per_result_type.values())\n",
+    "                - record_keys_per_result_type[result_type]\n",
+    "            ):\n",
+    "                print(\n",
+    "                    f\"Missing {dataset_name}, {source_name}, {attack_name}, {attack_strength}, {result_type}\"\n",
+    "                )\n",
+    "        record_keys_per_dataset_source[(dataset_name, source_name)] = set.intersection(\n",
+    "            *record_keys_per_result_type.values()\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "print(\"#\" * 60)\n",
+    "print(\"Checking for inconsistency across datasetes and sources\")\n",
+    "for dataset_name in DATASET_NAMES.keys():\n",
+    "    for source_name in WATERMARK_METHODS.keys():\n",
+    "        for attack_name, attack_strength in (\n",
+    "            set.union(*record_keys_per_dataset_source.values())\n",
+    "            - record_keys_per_dataset_source[(dataset_name, source_name)]\n",
+    "        ):\n",
+    "            print(\n",
+    "                f\"Missing {dataset_name}, {source_name}, {attack_name}, {attack_strength}\"\n",
+    "            )"
    ]
   }
  ],
