enhance that encode image metatime will not change encoded string

--- a/dev_notebooks/Check_Dataset_Record_Consistency.ipynb
+++ b/dev_notebooks/Check_Dataset_Record_Consistency.ipynb
@@ -11,23 +11,135 @@
      "text": [
       "############################################################\n",
       "Checking for inconsistency in record types\n",
-      "Missing diffusiondb, tree_ring, 2x_regen, 10.0, reverse\n",
-      "Missing diffusiondb, tree_ring, adv_emb_clip_untg_alphaRatio_0.05_step_200, 2.0, decode\n",
-      "Missing diffusiondb, tree_ring, 2x_regen, 10.0, decode\n",
-      "Missing diffusiondb, tree_ring, 2x_regen, 10.0, metric\n",
-      "Missing diffusiondb, stable_sig, 2x_regen, 10.0, metric\n",
-      "Missing diffusiondb, stegastamp, 2x_regen, 10.0, decode\n",
-      "Missing diffusiondb, stegastamp, 2x_regen, 10.0, metric\n",
-      "Missing mscoco, tree_ring, 2x_regen, 10.0, status\n",
-      "Missing dalle3, tree_ring, 2x_regen, 10.0, status\n",
-      "############################################################\n",
-      "Checking for inconsistency across datasetes and sources\n",
-      "Missing diffusiondb, tree_ring, adv_emb_clip_untg_alphaRatio_0.05_step_200, 2.0\n",
-      "Missing diffusiondb, tree_ring, 2x_regen, 10.0\n",
-      "Missing diffusiondb, stable_sig, 2x_regen, 10.0\n",
-      "Missing diffusiondb, stegastamp, 2x_regen, 10.0\n",
-      "Missing mscoco, tree_ring, 2x_regen, 10.0\n",
-      "Missing dalle3, tree_ring, 2x_regen, 10.0\n"
+      "Missing diffusiondb, tree_ring, distortion_single_rotation, 3.0, reverse\n",
+      "Missing diffusiondb, tree_ring, distortion_single_rotation, 3.0, decode\n",
+      "Missing diffusiondb, tree_ring, 4x_regen, 2.0, decode\n",
+      "Missing diffusiondb, tree_ring, distortion_combo_degradation, 0.02, decode\n",
+      "Missing diffusiondb, tree_ring, distortion_single_resizedcrop, 0.85, decode\n",
+      "Missing diffusiondb, tree_ring, distortion_single_rotation, 1.0, decode\n",
+      "Missing diffusiondb, tree_ring, distortion_single_resizedcrop, 0.95, decode\n",
+      "Missing diffusiondb, tree_ring, 4x_regen, 1.0, decode\n",
+      "Missing diffusiondb, tree_ring, distortion_single_rotation, 3.0, metric\n",
+      "Missing diffusiondb, tree_ring, 4x_regen, 2.0, metric\n",
+      "Missing diffusiondb, tree_ring, distortion_combo_degradation, 0.02, metric\n",
+      "Missing diffusiondb, tree_ring, distortion_single_resizedcrop, 0.85, metric\n",
+      "Missing diffusiondb, tree_ring, distortion_single_rotation, 1.0, metric\n",
+      "Missing diffusiondb, tree_ring, distortion_single_resizedcrop, 0.95, metric\n",
+      "Missing diffusiondb, tree_ring, 4x_regen, 1.0, metric\n",
+      "Missing diffusiondb, stable_sig, distortion_single_rotation, 3.0, decode\n",
+      "Missing diffusiondb, stable_sig, 4x_regen, 2.0, decode\n",
+      "Missing diffusiondb, stable_sig, distortion_combo_degradation, 0.02, decode\n",
+      "Missing diffusiondb, stable_sig, distortion_single_resizedcrop, 0.85, decode\n",
+      "Missing diffusiondb, stable_sig, distortion_single_rotation, 1.0, decode\n",
+      "Missing diffusiondb, stable_sig, distortion_single_resizedcrop, 0.95, decode\n",
+      "Missing diffusiondb, stable_sig, 4x_regen, 1.0, decode\n",
+      "Missing diffusiondb, stable_sig, distortion_single_rotation, 3.0, metric\n",
+      "Missing diffusiondb, stable_sig, 4x_regen, 2.0, metric\n",
+      "Missing diffusiondb, stable_sig, distortion_combo_degradation, 0.02, metric\n",
+      "Missing diffusiondb, stable_sig, distortion_single_resizedcrop, 0.85, metric\n",
+      "Missing diffusiondb, stable_sig, distortion_single_rotation, 1.0, metric\n",
+      "Missing diffusiondb, stable_sig, distortion_single_resizedcrop, 0.95, metric\n",
+      "Missing diffusiondb, stable_sig, 4x_regen, 1.0, metric\n",
+      "Missing diffusiondb, stegastamp, distortion_single_rotation, 3.0, decode\n",
+      "Missing diffusiondb, stegastamp, 4x_regen, 2.0, decode\n",
+      "Missing diffusiondb, stegastamp, distortion_combo_degradation, 0.02, decode\n",
+      "Missing diffusiondb, stegastamp, distortion_single_resizedcrop, 0.85, decode\n",
+      "Missing diffusiondb, stegastamp, distortion_single_rotation, 1.0, decode\n",
+      "Missing diffusiondb, stegastamp, distortion_single_resizedcrop, 0.95, decode\n",
+      "Missing diffusiondb, stegastamp, 4x_regen, 1.0, decode\n",
+      "Missing diffusiondb, stegastamp, distortion_single_rotation, 3.0, metric\n",
+      "Missing diffusiondb, stegastamp, 4x_regen, 2.0, metric\n",
+      "Missing diffusiondb, stegastamp, distortion_combo_degradation, 0.02, metric\n",
+      "Missing diffusiondb, stegastamp, distortion_single_resizedcrop, 0.85, metric\n",
+      "Missing diffusiondb, stegastamp, distortion_single_rotation, 1.0, metric\n",
+      "Missing diffusiondb, stegastamp, distortion_single_resizedcrop, 0.95, metric\n",
+      "Missing diffusiondb, stegastamp, 4x_regen, 1.0, metric\n",
+      "Missing mscoco, tree_ring, distortion_single_resizedcrop, 0.85, reverse\n",
+      "Missing mscoco, tree_ring, distortion_combo_degradation, 0.02, reverse\n",
+      "Missing mscoco, tree_ring, distortion_single_resizedcrop, 0.95, reverse\n",
+      "Missing mscoco, tree_ring, distortion_single_rotation, 3.0, reverse\n",
+      "Missing mscoco, tree_ring, distortion_single_rotation, 3.0, decode\n",
+      "Missing mscoco, tree_ring, 4x_regen, 2.0, decode\n",
+      "Missing mscoco, tree_ring, distortion_combo_degradation, 0.02, decode\n",
+      "Missing mscoco, tree_ring, distortion_single_resizedcrop, 0.85, decode\n",
+      "Missing mscoco, tree_ring, distortion_single_rotation, 1.0, decode\n",
+      "Missing mscoco, tree_ring, distortion_single_resizedcrop, 0.95, decode\n",
+      "Missing mscoco, tree_ring, 4x_regen, 1.0, decode\n",
+      "Missing mscoco, tree_ring, distortion_single_rotation, 3.0, metric\n",
+      "Missing mscoco, tree_ring, 4x_regen, 2.0, metric\n",
+      "Missing mscoco, tree_ring, distortion_combo_degradation, 0.02, metric\n",
+      "Missing mscoco, tree_ring, distortion_single_resizedcrop, 0.85, metric\n",
+      "Missing mscoco, tree_ring, distortion_single_rotation, 1.0, metric\n",
+      "Missing mscoco, tree_ring, distortion_single_resizedcrop, 0.95, metric\n",
+      "Missing mscoco, tree_ring, 4x_regen, 1.0, metric\n",
+      "Missing mscoco, stable_sig, distortion_single_rotation, 3.0, decode\n",
+      "Missing mscoco, stable_sig, 4x_regen, 2.0, decode\n",
+      "Missing mscoco, stable_sig, distortion_combo_degradation, 0.02, decode\n",
+      "Missing mscoco, stable_sig, distortion_single_resizedcrop, 0.85, decode\n",
+      "Missing mscoco, stable_sig, distortion_single_rotation, 1.0, decode\n",
+      "Missing mscoco, stable_sig, distortion_single_resizedcrop, 0.95, decode\n",
+      "Missing mscoco, stable_sig, 4x_regen, 1.0, decode\n",
+      "Missing mscoco, stable_sig, distortion_single_rotation, 3.0, metric\n",
+      "Missing mscoco, stable_sig, 4x_regen, 2.0, metric\n",
+      "Missing mscoco, stable_sig, distortion_combo_degradation, 0.02, metric\n",
+      "Missing mscoco, stable_sig, distortion_single_resizedcrop, 0.85, metric\n",
+      "Missing mscoco, stable_sig, distortion_single_rotation, 1.0, metric\n",
+      "Missing mscoco, stable_sig, distortion_single_resizedcrop, 0.95, metric\n",
+      "Missing mscoco, stable_sig, 4x_regen, 1.0, metric\n",
+      "Missing mscoco, stegastamp, distortion_single_rotation, 3.0, decode\n",
+      "Missing mscoco, stegastamp, 4x_regen, 2.0, decode\n",
+      "Missing mscoco, stegastamp, distortion_combo_degradation, 0.02, decode\n",
+      "Missing mscoco, stegastamp, distortion_single_resizedcrop, 0.85, decode\n",
+      "Missing mscoco, stegastamp, distortion_single_rotation, 1.0, decode\n",
+      "Missing mscoco, stegastamp, distortion_single_resizedcrop, 0.95, decode\n",
+      "Missing mscoco, stegastamp, 4x_regen, 1.0, decode\n",
+      "Missing mscoco, stegastamp, distortion_single_rotation, 3.0, metric\n",
+      "Missing mscoco, stegastamp, 4x_regen, 2.0, metric\n",
+      "Missing mscoco, stegastamp, distortion_combo_degradation, 0.02, metric\n",
+      "Missing mscoco, stegastamp, distortion_single_resizedcrop, 0.85, metric\n",
+      "Missing mscoco, stegastamp, distortion_single_rotation, 1.0, metric\n",
+      "Missing mscoco, stegastamp, distortion_single_resizedcrop, 0.95, metric\n",
+      "Missing mscoco, stegastamp, 4x_regen, 1.0, metric\n",
+      "Missing dalle3, tree_ring, distortion_single_rotation, 3.0, reverse\n",
+      "Missing dalle3, tree_ring, distortion_single_rotation, 3.0, decode\n",
+      "Missing dalle3, tree_ring, 4x_regen, 2.0, decode\n",
+      "Missing dalle3, tree_ring, distortion_combo_degradation, 0.02, decode\n",
+      "Missing dalle3, tree_ring, distortion_single_resizedcrop, 0.85, decode\n",
+      "Missing dalle3, tree_ring, distortion_single_rotation, 1.0, decode\n",
+      "Missing dalle3, tree_ring, distortion_single_resizedcrop, 0.95, decode\n",
+      "Missing dalle3, tree_ring, distortion_single_rotation, 3.0, metric\n",
+      "Missing dalle3, tree_ring, 4x_regen, 2.0, metric\n",
+      "Missing dalle3, tree_ring, distortion_combo_degradation, 0.02, metric\n",
+      "Missing dalle3, tree_ring, distortion_single_resizedcrop, 0.85, metric\n",
+      "Missing dalle3, tree_ring, distortion_single_rotation, 1.0, metric\n",
+      "Missing dalle3, tree_ring, distortion_single_resizedcrop, 0.95, metric\n",
+      "Missing dalle3, tree_ring, 4x_regen, 1.0, metric\n",
+      "Missing dalle3, stable_sig, distortion_single_rotation, 3.0, decode\n",
+      "Missing dalle3, stable_sig, 4x_regen, 2.0, decode\n",
+      "Missing dalle3, stable_sig, distortion_combo_degradation, 0.02, decode\n",
+      "Missing dalle3, stable_sig, distortion_single_resizedcrop, 0.85, decode\n",
+      "Missing dalle3, stable_sig, distortion_single_rotation, 1.0, decode\n",
+      "Missing dalle3, stable_sig, distortion_single_resizedcrop, 0.95, decode\n",
+      "Missing dalle3, stable_sig, distortion_single_rotation, 3.0, metric\n",
+      "Missing dalle3, stable_sig, 4x_regen, 2.0, metric\n",
+      "Missing dalle3, stable_sig, distortion_combo_degradation, 0.02, metric\n",
+      "Missing dalle3, stable_sig, distortion_single_resizedcrop, 0.85, metric\n",
+      "Missing dalle3, stable_sig, distortion_single_rotation, 1.0, metric\n",
+      "Missing dalle3, stable_sig, distortion_single_resizedcrop, 0.95, metric\n",
+      "Missing dalle3, stable_sig, 4x_regen, 1.0, metric\n",
+      "Missing dalle3, stegastamp, distortion_single_rotation, 3.0, decode\n",
+      "Missing dalle3, stegastamp, 4x_regen, 2.0, decode\n",
+      "Missing dalle3, stegastamp, distortion_combo_degradation, 0.02, decode\n",
+      "Missing dalle3, stegastamp, distortion_single_resizedcrop, 0.85, decode\n",
+      "Missing dalle3, stegastamp, distortion_single_rotation, 1.0, decode\n",
+      "Missing dalle3, stegastamp, distortion_single_resizedcrop, 0.95, decode\n",
+      "Missing dalle3, stegastamp, distortion_single_rotation, 3.0, metric\n",
+      "Missing dalle3, stegastamp, 4x_regen, 2.0, metric\n",
+      "Missing dalle3, stegastamp, distortion_combo_degradation, 0.02, metric\n",
+      "Missing dalle3, stegastamp, distortion_single_resizedcrop, 0.85, metric\n",
+      "Missing dalle3, stegastamp, distortion_single_rotation, 1.0, metric\n",
+      "Missing dalle3, stegastamp, distortion_single_resizedcrop, 0.95, metric\n",
+      "Missing dalle3, stegastamp, 4x_regen, 1.0, metric\n"
      ]
     }
    ],
@@ -71,11 +183,26 @@
     "                print(\n",
     "                    f\"Missing {dataset_name}, {source_name}, {attack_name}, {attack_strength}, {result_type}\"\n",
     "                )\n",
-    "        record_keys_per_dataset_source[(dataset_name, source_name)] = set.intersection(\n",
+    "        record_keys_per_dataset_source[(dataset_name, source_name)] = set.union(\n",
     "            *record_keys_per_result_type.values()\n",
-    "        )\n",
-    "\n",
-    "\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################################\n",
+      "Checking for inconsistency across datasetes and sources\n"
+     ]
+    }
+   ],
+   "source": [
     "print(\"#\" * 60)\n",
     "print(\"Checking for inconsistency across datasetes and sources\")\n",
     "for dataset_name in DATASET_NAMES.keys():\n",
